src/components/RelativeRangeDatePicker/components/PickerDialog/PickerDoc.scss
@use '@gravity-ui/uikit/styles/mixins';
@use '../../../variables';

$block: '.#{variables.$ns}relative-range-date-picker-doc';

#{$block} {
    &__button {
        --g-button-background-color-hover: transparent;
    }

    &__table {
        &_size_xl {
            @include mixins.text-body-2();
        }

        & > table {
            width: 100%;
        }
    }

    &__row {
        vertical-align: baseline;
    }
}

